--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
     "devDependencies": {
-        "@hotwired/stimulus": "^3.0.0",
-        "@symfony/stimulus-bridge": "^3.0.0",
+        "@babel/preset-react": "^7.16.7",
         "@symfony/webpack-encore": "^1.7.0",
         "core-js": "^3.0.0",
+        "prettier": "^2.6.1",
         "regenerator-runtime": "^0.13.2",
         "webpack-notifier": "^1.6.0"
     },
@@ -14,5 +14,10 @@
         "dev": "encore dev",
         "watch": "encore dev --watch",
         "build": "encore production --progress"
+    },
+    "dependencies": {
+        "react": "^18.0.0",
+        "react-dom": "^18.0.0",
+        "react-router-dom": "^6.3.0"
     }
 }
